--- a/style.css
+++ b/style.css
@@ -4,74 +4,34 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  flex;
+  
 }
 
 .header {
   height: 72px;
-  background: darkmagenta;
+  
   color: white;
   font-size: 32px;
   font-weight: 900;
   padding-left: 16px;
 }
 
+
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
-}
-
-.sidebar {
-
-  width: 300px;
-  background: royalblue;
-  box-sizing: border-box;
   
 }
 
-.card {
-  border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
-  width: 300px;
-  min-height: 300px;
-  flex-grow: 0;
-  padding: 10px;
+.Box1 ,.footer {
+  background: #1f2937;
 }
 
-.main {
-  display: flex;
-  flex: 1;
-}
-
-.sidebar { 
-  
-  justify-content: start;
-  padding-right: 0px;
-  min-width: 300px;
-  padding: 16px;
-  min-width: 300px;
-  flex-shrink: 0;
-}
-
-ul {
-  list-style-type: none;
-
-}
-
-a {
-  text-decoration: none;
-  color: #eee;
-  font-size: 24px;
-  
-}
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  padding: 32px;
-}
 .footer {
   text-align: center;
+}
+
+.Box3 {
+  background-color: #e5e7eb;
 }
