--- a/style.css
+++ b/style.css
@@ -9,12 +9,38 @@ body {
 
 .header {
   height: 72px;
+  display: flex;
+  justify-content: space-between;
   
-  color: white;
-  font-size: 32px;
+}
+.underHeader {
+  justify-self: flex-start;
+  color: #f9faf8;
+  font-size: 24px;
   font-weight: 900;
   padding-left: 16px;
 }
+
+.ulUnderHeader {
+  justify-self: flex-end;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 10px;
+  padding-right: 40px;
+}
+ 
+a {
+  color: #e5e7eb;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+
 
 
 .footer {
@@ -28,6 +54,10 @@ body {
   background: #1f2937;
 }
 
+.Box1 {
+  display: flex;
+  flex-direction: column;
+}
 .footer {
   text-align: center;
 }
@@ -35,3 +65,16 @@ body {
 .Box3 {
   background-color: #e5e7eb;
 }
+
+.main {
+  display: flex;
+  flex-direction: row;
+  width: auto;
+}
+
+.underMainLeftBox {
+  display: flex;
+  flex-direction: column;
+}
+
+
