--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   display: flex;
   flex-direction: column;
   
+  
 }
 
 .header {
@@ -14,11 +15,13 @@ body {
   
 }
 .underHeader {
+  padding-top: 15px;
   justify-self: flex-start;
   color: #f9faf8;
   font-size: 24px;
   font-weight: 900;
   padding-left: 16px;
+  
 }
 
 .ulUnderHeader {
@@ -28,6 +31,7 @@ body {
   justify-content: space-between;
   gap: 10px;
   padding-right: 40px;
+  flex-wrap: wrap;
 }
  
 a , .paragraphBody {
@@ -57,6 +61,9 @@ ul {
 .Box1 {
   display: flex;
   flex-direction: column;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 5%;
 }
 .footer {
   text-align: center;
@@ -70,6 +77,7 @@ ul {
   display: flex;
   flex-direction: row;
   width: auto;
+  gap: 6px;
 }
 
 .underMainLeftBox {
@@ -94,9 +102,22 @@ button {
   font-size: 24px;
   padding: 2%;
   background-color: #3882F6;
-  height: 15%;
-  width:  25%;
+  height: 50px;
+  width:  160px;
   border: none;
-  
+  flex-shrink: 0;
 }
 
+
+.underMainRightBox {
+  display: flex;
+  justify-content: center;
+  
+  min-width: 50%;
+  background-color: #6d747d;
+  text-align: center;
+  align-items: center;
+  color: #f9faf8;
+  margin-top: 70px;
+  
+}
