--- a/style.css
+++ b/style.css
@@ -121,3 +121,65 @@ button {
   margin-top: 70px;
   
 }
+
+
+.Box2 {
+  display: flex;
+  flex-direction: column;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 5%;
+}
+
+.underBox2First {
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.underBox2SecondCard {
+  min-width: 150px;
+  min-height: 150px;
+  
+  
+  flex-wrap: wrap;
+  
+  
+  
+  flex-direction: column;
+  display: flex;
+  align-self: baseline;
+
+}
+
+.Image {
+  min-width: 97%;
+  min-height: 150px;
+  
+  flex-grow: 1;
+  background-color: #f9faf8;
+  
+  border:3px solid;
+  border-radius: 10px;
+  border-color:  #3882F6; ;
+}
+
+.underBox2Second {
+  display: flex;
+  flex-direction: row;
+  min-height: 300px;
+  min-width: auto;
+  flex-wrap: wrap;
+  justify-content: space-around; 
+  flex: 1;
+  
+}
+
+.paragraphUnderImage {
+  align-self: self-start;
+  width: 150px;
+  margin: 5%;
+  margin-bottom: 7%;
+  text-align: center;
+}
