--- a/style.css
+++ b/style.css
@@ -173,7 +173,8 @@ button {
   flex-wrap: wrap;
   justify-content: space-around; 
   flex: 1;
-  
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
 
 .paragraphUnderImage {
