--- a/style.css
+++ b/style.css
@@ -197,8 +197,13 @@ button {
 .underBox3 {
   font-style:36px ;
   font-style: italic;
+  
 }
 
+.quote {
+  justify-self: flex-end;
+  padding-left: 10%;
+}
 .Signature {
   font-style: normal;
   font-weight: bold;
